# mkwpp-api-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  build.rs  build.sh
.github/workflows/: ci.yml  rust.yml
db/fixtures/: playerawards.json  regions.json  standardlevels.json  tracks.json
db/fixtures/old/: blogposts.json  editscoresubmissions.json  players.json  scoresubmissions.json  sitechampions.json  standards.json  trackcups.json  tracks.json
db/migrations/: 00001_create_tables.sql  00002_region_id_not_null.sql  00003_user.sql  00004_submitters.sql  00005_set_submissions_submitted_time_default.sql  00006_make_dates_editable_submissions.sql  00007_fix_submissions_reviewer.sql  00008_fix_submissions_status_nullable.sql  00009_blog_posts.sql  00010_acc_activation.sql  00011_token_system.sql  00012_make_primary_key.sql  00013_add_pronouns_column.sql  00014_make_blog_posts_author_id_constraint.sql  00015_chadsoft_ids.sql  00016_ditch_initial_rank.sql
db/queries/: by_date.sql  filter_charts.sql  filter_charts_dates.sql  filter_player_dates.sql  update_initial_rank.sql  update_initial_rank_all.sql  update_was_wr.sql  update_was_wr_all.sql
email_text/: password_reset.txt  verify_account.txt
env_handler/: Cargo.toml
env_handler/src/: lib.rs
env_handler_proc_macros/: Cargo.toml
env_handler_proc_macros/src/: lib.rs
frontend/doc/v1/: index.html  style.css
mkwpp-api-rust/: Cargo.toml  build.rs
mkwpp-api-rust/src/: main.rs
mkwpp-api-rust/src/api/: errors.rs  mod.rs
mkwpp-api-rust/src/api/v1/: mod.rs
mkwpp-api-rust/src/api/v1/admin/: mod.rs  players.rs  regions.rs  scores.rs  submissions.rs  users.rs
mkwpp-api-rust/src/api/v1/auth/: mod.rs  player.rs  submissions.rs
mkwpp-api-rust/src/api/v1/custom/: blog.rs  mod.rs  params.rs  players.rs  rankings.rs  regions.rs  site_champs.rs
mkwpp-api-rust/src/api/v1/custom/regions/: child_tree.rs  mod.rs
mkwpp-api-rust/src/api/v1/custom/scores/: chart.rs  mod.rs  recent.rs  records.rs  timesheet.rs
mkwpp-api-rust/src/api/v1/raw/: cups.rs  mod.rs
mkwpp-api-rust/src/app_state/: cache.rs  mod.rs
mkwpp-api-rust/src/auth/: cooldown.rs  mod.rs
mkwpp-api-rust/src/auth/validated_strings/: email.rs  mod.rs  password.rs  username.rs
mkwpp-api-rust/src/custom_serde/: mod.rs
mkwpp-api-rust/src/mail/: mod.rs
mkwpp-api-rust/src/sql/: config.rs  mod.rs
mkwpp-api-rust/src/sql/migrate/: mod.rs  new.rs
mkwpp-api-rust/src/sql/migrate/old/: awards.rs  blog_posts.rs  champs.rs  edit_submissions.rs  mod.rs  players.rs  regions.rs  scores.rs  standard_levels.rs  standards.rs  submissions.rs  tracks.rs
mkwpp-api-rust/src/sql/tables/: awards.rs  blog_posts.rs  champs.rs  cups.rs  edit_submissions.rs  mod.rs  standard_levels.rs  standards.rs  tracks.rs
mkwpp-api-rust/src/sql/tables/players/: mod.rs  players_basic.rs
mkwpp-api-rust/src/sql/tables/regions/: mod.rs  tree.rs  with_player_count.rs
mkwpp-api-rust/src/sql/tables/scores/: by_date.rs  country_rankings.rs  matchup.rs  mod.rs  rankings.rs  slowest_times.rs  timesets.rs  timesheet.rs  with_player.rs
mkwpp-api-rust/src/sql/tables/submissions/: edit_submissions.rs  mod.rs
run-scripts/: run.sh  serve.sh  watchexec.sh
src/: main.rs
src/api/: mod.rs
src/api/v1/: cups.rs  mod.rs  tracks.rs
src/api/v1/auth/: mod.rs
src/auth/: mod.rs
src/auth/validated_strings/: email.rs  mod.rs  password.rs  username.rs
src/sql/: config.rs
src/sql/tables/: awards.rs  champs.rs  cups.rs  edit_submissions.rs  mod.rs  players.rs  regions.rs  scores.rs  standard_levels.rs  standards.rs  submissions.rs  tracks.rs
(+51 files in other folders)
