[package]
name = "mkwpp-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "chrono", "postgres"] }
chrono = { version= "0.4.39", features = ["serde"] }
actix-web = "4.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
env_logger = "0.11.6"
typetag = "0.2.19"
async-trait = "0.1.86"

[lints.rust]
unused_imports = "deny"

[lints.clippy]
needless_return = "allow"
implicit_return = "deny"
too_many_arguments = "allow"
needless_borrow = "deny"
duplicate_mod = "deny"
exit = "allow"
manual_string_new = "deny"
string_to_string = "deny"
fn_to_numeric_cast_any = "deny"
