[workspace]
members = ["env_handler", "env_handler_proc_macros", "mkwpp-api-rust"]
resolver = "3"

[workspace.lints.rust]
unused_imports = "deny"

[workspace.lints.clippy]
semicolon_if_nothing_returned = "warn"
too_many_arguments = "allow"
needless_borrow = "deny"
duplicate_mod = "deny"
exit = "allow"
manual_string_new = "deny"
string_to_string = "deny"
fn_to_numeric_cast_any = "deny"
